terraform/networking.tf
data "aws_vpc" "existing" {
  id = "vpc-07c621ddc904bd10f"
}

data "aws_subnets" "existing" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.existing.id]
  }
}

resource "aws_security_group" "ecs_sg" {
  name        = "yolov8-ecs-sg"
  description = "Allow HTTP traffic for ECS and ALB"
  vpc_id      = data.aws_vpc.existing.id

  ingress {
    description = "HTTP traffic"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Flask API traffic"
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "yolov8-ecs-sg"
  }
}
